--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div>
                     <h1 class="title">All About Autism<span>                        
                     <img class="logo-img" src="assets/images/infinity_logo.png"
-                        alt="Autism Jigsaw Logo"
+                        alt="Autism infinity Logo"
                     aria-label="Multicoloured infinity figure of 8 logo."></span></h1>
                 </div>
             </div> 
@@ -34,7 +34,7 @@
               <a class="btn btn-lg active btn-info" aria-pressed="true" aria-label="This is the current page, home" href="index.html">Home</a>
               <a class="btn btn-lg btn-danger" aria-label="Go to the Myth Buster page (opens in a new tab)" href="myth.html">Myths</a>
               <a class="btn btn-lg btn-primary" aria-label="Go to the quiz page (opens in a new tab)" href="quiz.html">Quiz</a>
-              <a class="btn btn-lg btn-warning" aria-label="Go to the contacts page (opens in a new tab)" href="whatif.html">Contact</a>
+              <a class="btn btn-lg btn-warning" aria-label="Go to the contacts page (opens in a new tab)" href="contact.html">Contact</a>
             </div>
         </div>    
     </div>
@@ -89,7 +89,6 @@
                     There is no cure and diagnosis isn't a fix but it does help to identify 
                     triggers, can provide coping strategies and may explain what may have thus far been the unexplainable in your life.
                 </p>
-                <br>
                 </div>
             </div>
         </div>  
@@ -97,14 +96,14 @@
      <!-- first 2 entries -->
         <div class="container-fluid">
             <div class="row no-gutters section-details">        
-                <div class="col-sm-1 col-md-2">
+                <div class="col-sm-1 col-md-2 col-lg-3">
                 </div>
-                <div class="col-xs-8 col-md-4 col-sm-5">
-                    <div class="row">                              
-                        <button class="btn btn-block" type="button" data-toggle="collapse"
-                        data-target="#autism1" aria-expanded="false" aria-controls="autism">
-                         The Autistic Spectrum</button>
-                        <div class="content-hidden" id="autism1">  
+                <div class="col-sm-10 col-md-8 col-lg-6">
+                    <button class="btn btn-block" type="button" data-toggle="collapse"
+                    data-target="#autism1" aria-expanded="false" aria-controls="autism">
+                     The Autistic Spectrum</button>
+                    <div class="content-hidden" id="autism1">
+                        <div class="button-border">  
                                 <p>
                                     Autism is a spectrum condition and affects people in different ways. Like all people, autistic people have their own strengths and weaknesses. 
                                     The definition of Autism has changed over time and continues to change.
@@ -118,15 +117,18 @@
                                     More and more people are being diagnosed as autistic, 
                                     although we still have a long way to go in creating a world that works for autistic people.
                                 </p>
-                        </div>   
-                    </div>
+                        </div>
+                    </div>   
                 </div>
-                <div class="col-xs-8 col-md-4 col-sm-5">
-                    <div class="row">                             
-                        <button class="btn btn-block" type="button" data-toggle="collapse"
-                        data-target="#autism2" aria-expanded="false" aria-controls="autism">
-                        Spectrum Versus Disorder</button>
-                        <div class="content-hidden" id="autism2">
+            </div>
+            <div class="row no-gutters section-details">        
+                <div class="col-sm-1 col-md-2 col-lg-3">
+                </div>
+                <div class="col-sm-10 col-md-8 col-lg-6">
+                    <button class="btn btn-block" type="button" data-toggle="collapse"
+                    data-target="#autism2" aria-expanded="false" aria-controls="autism">
+                    Spectrum Versus Disorder</button>
+                    <div class="content-hidden" id="autism2">
                             <div class="button-border">
                             <p>
                                 Spectrum is often replaced by constellation as spectrum implies a degree of severity across all digfficulties when in fact a person may be
@@ -137,20 +139,18 @@
                                 It encompasses a range of colours to signify the wide variety of characteristics, strengths, and challenges present within the spectrum.
                             </p>
                             </div>
-                        </div>
                     </div>
                 </div>
             </div>           
             <div class="row no-gutters section-details">        
-                <div class="col-sm-1 col-md-2">
+                <div class="col-sm-1 col-md-2 col-lg-3">
                 </div>
-                <div class="col-xs-8 col-md-4 col-sm-5">
-                    <div class="row">                           
-                        <button class="btn btn-block" type="button" data-toggle="collapse"
-                             data-target="#autism3" aria-expanded="false" aria-controls="autism">
-                         High & Low Functioning</button>        
+                <div class="col-sm-10 col-md-8 col-lg-6">                           
+                    <button class="btn btn-block" type="button" data-toggle="collapse"
+                        data-target="#autism3" aria-expanded="false" aria-controls="autism">
+                        High & Low Functioning</button>        
                         <div class="content-hidden" id="autism3">
-                             <div>
+                            <div>
                                 <p>
                                     There is a big pile of confusion over Asperger’s, 
                                     Autism and functioning labels (high and low) that causes many difficulties for parents.
@@ -163,17 +163,22 @@
                                     The two are inseparable past that point, because they are essentially the same thing.
                                      <strong>There is no identifiable difference between an adult diagnosed with Asperger’s and an adult with a diagnosis of High-Functioning Autism.</strong>
                                 </p>
-                             </div>   
-                        </div>
+                        </div>   
                     </div>
                 </div>
-                <div class="col-xs-8 col-md-4 col-sm-5">
-                    <div class="row">                            
-                        <button class="btn btn-block" type="button" data-toggle="collapse"
-                        data-target="#autism4" aria-expanded="false" aria-controls="autism">
-                        So, To Aspergers or not To Asp..</button>
-                        <div class="content-hidden" id="autism4"> 
-                            <div>
+            </div>
+            <div class="row no-gutters section-details">        
+                <div class="col-sm-1 col-md-2 col-lg-3">
+                </div>
+                <div class="col-sm-10 col-md-8 col-lg-6">                          
+                    <button class="btn btn-block" type="button" data-toggle="collapse"
+                    data-target="#autism4" aria-expanded="false" aria-controls="autism">
+                    So, To Aspergers or ...</button>
+                    <div class="content-hidden" id="autism4"> 
+                        <div>
+                            <p>
+                                not to aspbergers..
+                            </p>
                             <p>
                                 There are myths around Asperger’s that stem from the original decisions by Hans Asperger, who chose to separate the intelligent from the not-so intelligent.
                                  (The Nazi government funded and directed him, and that’s a whole other story and a reason many now avoid the term altogether.)
@@ -185,21 +190,22 @@
                             <p>
                                 Its complete nonsense, all Autistic people are individuals.
                             </p>
-                            </div>
                         </div>
                     </div>
                 </div>
             </div>            
             <div class="row no-gutters section-details">        
-                <div class="col-sm-1 col-md-2">
+                <div class="col-sm-1 col-md-2 col-lg-3">
                 </div>
-                <div class="col-xs-8 col-md-4 col-sm-5">
-                    <div class="row">                           
-                        <button class="btn btn-block" type="button" data-toggle="collapse"
-                         data-target="#autism5" aria-expanded="false" aria-controls="autism">
-                         I'm an individual..and so am I..</button>
-                        <div class="content-hidden" id="autism5">
+                <div class="col-sm-10 col-md-8 col-lg-6">
+                    <button class="btn btn-block" type="button" data-toggle="collapse"
+                     data-target="#autism5" aria-expanded="false" aria-controls="autism">
+                     I'm an individual, and..</button>
+                    <div class="content-hidden" id="autism5">
                             <div>
+                                <p>
+                                    So am I......
+                                </p>
                                 <p>
                                     We are all different, and function differently on a daily basis.
                                 </p>
@@ -208,15 +214,17 @@
                                     It just affects different people differently, often with a co-morbid condition exacerbating the problem.
                                 </p>
                              </div>   
-                        </div>
                     </div>
                 </div>
-                <div class="col-xs-8 col-md-4 col-sm-5">
-                    <div class="row">                            
-                        <button class="btn btn-block" type="button" data-toggle="collapse"
-                        data-target="#autism6" aria-expanded="false" aria-controls="autism">
-                        Hunting High and Low..</button>
-                        <div class="content-hidden" id="autism6">
+            </div>
+            <div class="row no-gutters section-details">        
+                <div class="col-sm-1 col-md-2 col-lg-3">
+                </div>
+                <div class="col-sm-10 col-md-8 col-lg-6">
+                    <button class="btn btn-block" type="button" data-toggle="collapse"
+                    data-target="#autism6" aria-expanded="false" aria-controls="autism">
+                    Hunting High and Low..</button>
+                    <div class="content-hidden" id="autism6">
                             <div>
                             <p>
                                 There are no separate High Functioning and Low Functioning people. Asperger’s and Autism are indistinguishable from each other, and so are the same.
@@ -227,38 +235,41 @@
                                  It puts a barrier up between all of these groups and already established Autistics.
                             </p>
                             </div>
-                        </div>
-                    </div>
+                    </div> 
                 </div>
             </div>
             <div class="row no-gutters section-details">        
-                <div class="col-sm-1 col-md-2">
+                <div class="col-sm-1 col-md-2 col-lg-3">
                 </div>
-                <div class="col-xs-8 col-md-4 col-sm-5">
-                    <div class="row">                           
-                        <button class="btn btn-block" type="button" data-toggle="collapse"
-                         data-target="#autism7" aria-expanded="false" aria-controls="autism">
-                         When you've met one Autistic person..</button>
-                         <div class="content-hidden" id="autism7">
-                         <div>
-                                <p>
-                                Then, as the sayiong goes, you've met <strong>ONE</strong> Autistic person. The diagnosis means that there is neurodiversity 
-                                but the scale, nature and breadth differ enormously. 
-                                </p>
-                                <p>
-                                If you add in different quantities of primary colour paint, adding in more blue on one mix and omitting a colour totally from the next then
-                                you'll get a new colour in a general spectrum but no two mixes will be identical.  
-                                </p>
-                         </div>   
-                        </div>
+                <div class="col-sm-10 col-md-8 col-lg-6">
+                    <button class="btn btn-block" type="button" data-toggle="collapse"
+                    data-target="#autism7" aria-expanded="false" aria-controls="autism">
+                    When you've met one ..</button>
+                    <div class="content-hidden" id="autism7">
+                        <div>
+                            <p>
+                                Autistic person..
+                            </p>
+                            <p>
+                            Then, as the saying goes, you've met <strong>ONE</strong> Autistic person. The diagnosis means that there is neurodiversity 
+                            but the scale, nature and breadth differ enormously. 
+                            </p>
+                            <p>
+                            If you add in different quantities of primary colour paint, adding in more blue on one mix and omitting a colour totally from the next then
+                            you'll get a new colour in a general spectrum but no two mixes will be identical.  
+                            </p>
+                        </div>   
                     </div>
+               </div>
+            </div>
+            <div class="row no-gutters section-details">        
+                <div class="col-sm-1 col-md-2 col-lg-3">
                 </div>
-                <div class="col-xs-8 col-md-4 col-sm-5">
-                    <div class="row">                            
-                        <button class="btn btn-block" type="button" data-toggle="collapse"
-                        data-target="#autism8" aria-expanded="false" aria-controls="autism">
-                        Chase the Rainbow...</button>
-                        <div class="content-hidden" id="autism8">
+                <div class="col-sm-10 col-md-8 col-lg-6">
+                    <button class="btn btn-block" type="button" data-toggle="collapse"
+                    data-target="#autism8" aria-expanded="false" aria-controls="autism">
+                    Chase the Rainbow...</button>
+                    <div class="content-hidden" id="autism8">
                             <div>
                             <p>
                                 The puzzle pattern represents the complexity of the autism spectrum, and the use of primary colours symbolises
@@ -269,7 +280,6 @@
                                 so the rainbow, eternity symbol or mobius strip are often preferred. 
                             </p>
                             </div>
-                        </div>
                     </div>
                 </div>
             </div>              
