Func: resize menus and titles for response to 280px, add images to index.html

--- a/index.html
+++ b/index.html
@@ -95,29 +95,28 @@
 <!-- start of extended accordion style content -->
      <!-- first 2 entries -->
         <div class="container-fluid">
+        <div class="options">
             <div class="row no-gutters section-details">        
                 <div class="col-sm-1 col-md-2 col-lg-3">
                 </div>
                 <div class="col-sm-10 col-md-8 col-lg-6">
-                    <button class="btn btn-block" type="button" data-toggle="collapse"
+                    <button class="btn btn-block btn-icon" type="button"
                     data-target="#autism1" aria-expanded="false" aria-controls="autism">
-                     The Autistic Spectrum</button>
-                    <div class="content-hidden" id="autism1">
-                        <div class="button-border">  
-                                <p>
-                                    Autism is a spectrum condition and affects people in different ways. Like all people, autistic people have their own strengths and weaknesses. 
-                                    The definition of Autism has changed over time and continues to change.
-                                </p>
-                                <p>
-                                    It has been more than 50 years since Leo Kanner first described his classic autistic syndrome.
-                                    Since then, the results of research and clinical work have helped us learn more about autism.
-                                    Regardless of this recent naming of the condition, its clear that Autism has been with us for millenia...
-                                </p>
-                                <p>
-                                    More and more people are being diagnosed as autistic, 
-                                    although we still have a long way to go in creating a world that works for autistic people.
-                                </p>
-                        </div>
+                    The Autistic Spectrum</button>
+                    <div class="content-hidden" id="autism1">  
+                        <p>
+                            Autism is a spectrum condition and affects people in different ways. Like all people, autistic people have their own strengths and weaknesses. 
+                            The definition of Autism has changed over time and continues to change.
+                        </p>
+                        <p>
+                            It has been more than 50 years since <a href="https://en.wikipedia.org/wiki/Leo_Kanner">Leo Kanner</a> first described his classic autistic syndrome.
+                            Since then, the results of research and clinical work have helped us learn more about autism.
+                            Regardless of this recent naming of the condition, its clear that Autism has been with us for millenia...
+                        </p>
+                        <p>
+                            More and more people are being diagnosed as autistic, 
+                            although we still have a long way to go in creating a world that works for autistic people.
+                        </p>
                     </div>   
                 </div>
             </div>
@@ -125,28 +124,31 @@
                 <div class="col-sm-1 col-md-2 col-lg-3">
                 </div>
                 <div class="col-sm-10 col-md-8 col-lg-6">
-                    <button class="btn btn-block" type="button" data-toggle="collapse"
+                    <button class="btn btn-block btn-icon" type="button" data-toggle="collapse"
                     data-target="#autism2" aria-expanded="false" aria-controls="autism">
                     Spectrum Versus Disorder</button>
                     <div class="content-hidden" id="autism2">
-                            <div class="button-border">
-                            <p>
-                                Spectrum is often replaced by constellation as spectrum implies a degree of severity across all digfficulties when in fact a person may be
+                        <p>
+                            Spectrum is often replaced by constellation as spectrum implies a degree of severity across all difficulties when in fact a person may be
                              quite challenged in one area but excel in another.
-                            </p>
-                            <p>
-                                The rainbow spectrum is a common symbol used to represent the diversity of the autism community. 
-                                It encompasses a range of colours to signify the wide variety of characteristics, strengths, and challenges present within the spectrum.
-                            </p>
-                            </div>
-                    </div>
+                        </p>
+                        <p>
+                            <img class="img img-responsive" src="assets/images/neurodiversity.png"
+                            alt="Autism neurodiversoty Logo"
+                            aria-label="Multicoloured infinity figure with the title neurodiversity.">
+                        </p>
+                        <p>
+                            The rainbow spectrum is a common symbol used to represent the diversity of the autism community. 
+                            It encompasses a range of colours to signify the wide variety of characteristics, strengths, and challenges present within the spectrum.
+                        </p>
+                        </div>
                 </div>
             </div>           
             <div class="row no-gutters section-details">        
                 <div class="col-sm-1 col-md-2 col-lg-3">
                 </div>
                 <div class="col-sm-10 col-md-8 col-lg-6">                           
-                    <button class="btn btn-block" type="button" data-toggle="collapse"
+                    <button class="btn btn-block btn-icon" type="button" data-toggle="collapse"
                         data-target="#autism3" aria-expanded="false" aria-controls="autism">
                         High & Low Functioning</button>        
                         <div class="content-hidden" id="autism3">
@@ -171,17 +173,22 @@
                 <div class="col-sm-1 col-md-2 col-lg-3">
                 </div>
                 <div class="col-sm-10 col-md-8 col-lg-6">                          
-                    <button class="btn btn-block" type="button" data-toggle="collapse"
+                    <button class="btn btn-block btn-icon" type="button" data-toggle="collapse"
                     data-target="#autism4" aria-expanded="false" aria-controls="autism">
                     So, To Aspergers or ...</button>
                     <div class="content-hidden" id="autism4"> 
                         <div>
-                            <p>
-                                not to aspbergers..
+                            <p class="center-text">
+                                not to Aspbergers..
                             </p>
                             <p>
                                 There are myths around Asperger’s that stem from the original decisions by Hans Asperger, who chose to separate the intelligent from the not-so intelligent.
                                  (The Nazi government funded and directed him, and that’s a whole other story and a reason many now avoid the term altogether.)
+                            </p>
+                            <p>
+                                <img class="img img-responsive" src="assets/images/batman.png"
+                                alt="batman symbol"
+                                aria-label="batman symbol in autism colors.">
                             </p>
                             <p>
                                 The High and Low Functioning labels were intended to separate out Autistics with an IQ under 70. Now though, societally functioning labels are used by people 
@@ -198,16 +205,21 @@
                 <div class="col-sm-1 col-md-2 col-lg-3">
                 </div>
                 <div class="col-sm-10 col-md-8 col-lg-6">
-                    <button class="btn btn-block" type="button" data-toggle="collapse"
+                    <button class="btn btn-block btn-icon" type="button" data-toggle="collapse"
                      data-target="#autism5" aria-expanded="false" aria-controls="autism">
                      I'm an individual, and..</button>
                     <div class="content-hidden" id="autism5">
                             <div>
-                                <p>
+                                <p class="center-text">
                                     So am I......
                                 </p>
                                 <p>
                                     We are all different, and function differently on a daily basis.
+                                </p>
+                                <p>
+                                    <img class="img img-responsive" src="assets/images/montage.jpg"
+                                    alt="montage of 3 people"
+                                    aria-label="montage of 3 famous autistic peopele. einstenin jobs.">
                                 </p>
                                 <p>
                                     Autism is Autism. Though certain people have better support structures and coping strategies than others, the underlying Autism is the same.
@@ -221,7 +233,7 @@
                 <div class="col-sm-1 col-md-2 col-lg-3">
                 </div>
                 <div class="col-sm-10 col-md-8 col-lg-6">
-                    <button class="btn btn-block" type="button" data-toggle="collapse"
+                    <button class="btn btn-block btn-icon" type="button" data-toggle="collapse"
                     data-target="#autism6" aria-expanded="false" aria-controls="autism">
                     Hunting High and Low..</button>
                     <div class="content-hidden" id="autism6">
@@ -229,6 +241,11 @@
                             <p>
                                 There are no separate High Functioning and Low Functioning people. Asperger’s and Autism are indistinguishable from each other, and so are the same.
                                  There is no mild Autism, or severe Autism; there is only Autism and the ability of the individual to prevent societal norms from crippling them.
+                            </p>
+                            <p>
+                                <img class="img img-responsive" src="assets/images/Func_labels.png"
+                                alt="functional label Logo"
+                                aria-label="Image identifying the unhelpfuless of functional labels.">
                             </p>
                             <p>
                                 The vagueness of all this, and the misunderstanding and myths around it, just serves to confuse Neurotypicals as well as pre- and newly diagnosed people.
@@ -242,17 +259,22 @@
                 <div class="col-sm-1 col-md-2 col-lg-3">
                 </div>
                 <div class="col-sm-10 col-md-8 col-lg-6">
-                    <button class="btn btn-block" type="button" data-toggle="collapse"
+                    <button class="btn btn-block btn-icon" type="button" data-toggle="collapse"
                     data-target="#autism7" aria-expanded="false" aria-controls="autism">
                     When you've met one ..</button>
                     <div class="content-hidden" id="autism7">
                         <div>
-                            <p>
+                            <p class="center-text">
                                 Autistic person..
                             </p>
                             <p>
                             Then, as the saying goes, you've met <strong>ONE</strong> Autistic person. The diagnosis means that there is neurodiversity 
                             but the scale, nature and breadth differ enormously. 
+                            </p>
+                            <p>
+                                <img class="img img-responsive" src="assets/images/famous_autistic.jpeg"
+                                alt="montage of autistic people"
+                                aria-label="montage of autitic people, einstein, darwin, thunberg and others ">
                             </p>
                             <p>
                             If you add in different quantities of primary colour paint, adding in more blue on one mix and omitting a colour totally from the next then
@@ -266,7 +288,7 @@
                 <div class="col-sm-1 col-md-2 col-lg-3">
                 </div>
                 <div class="col-sm-10 col-md-8 col-lg-6">
-                    <button class="btn btn-block" type="button" data-toggle="collapse"
+                    <button class="btn btn-block btn-icon" type="button" data-toggle="collapse"
                     data-target="#autism8" aria-expanded="false" aria-controls="autism">
                     Chase the Rainbow...</button>
                     <div class="content-hidden" id="autism8">
@@ -276,13 +298,19 @@
                                  the diversity of people living with autism and their families.
                             </p>
                             <p>
+                                <img class="img img-responsive" src="assets/images/missing _piece.png"
+                                alt="missing piece logo"
+                                aria-label="protest logo stating we were never missing pieces.">
+                            </p>
+                            <p>
                                 However, there are those who view the 'puzzle' as a negative concept - something to be 'fixed', 
                                 so the rainbow, eternity symbol or mobius strip are often preferred. 
                             </p>
                             </div>
                     </div>
                 </div>
-            </div>              
+            </div> 
+        </div>             
         </div>
     <!-- end of main data - now summarise -->
         <div class="container-fluid">
