--- a/myth.html
+++ b/myth.html
@@ -60,7 +60,7 @@
                         <p class="indent-para">
                             <strong>Social communication:</strong>
                         </p>
-                        <ul>
+                        <ul class="myth">
                             <li>
                                 Taking things literally and not understanding abstract concepts.
                             </li>
@@ -74,7 +74,7 @@
                         <p class="indent-para">
                             <strong>Social interaction:</strong>
                         </p>
-                        <ul>
+                        <ul class="myth">
                             <li>
                                 Appear to be insensitive (or over sensitive).
                             </li>
@@ -94,7 +94,7 @@
                         <p class="indent-para">
                             <strong>Other Key Difficluties:</strong>
                         </p>
-                        <ul>
+                        <ul class="myth">
                             <li>
                                 Repetitive and restrictive behaviour.
                             </li>
@@ -121,7 +121,7 @@
                         <p>
                             They may want to:
                         </p>
-                        <ul>
+                        <ul class="myth">
                             <li>
                                 Travel the same way to and from school or work.
                             </li>
@@ -281,7 +281,7 @@
             </div> 
     <!-- end of main data - now summarise -->
             <div class="container-fluid">
-                <div class="row section-details">  
+                <div class="row no-gutters section-details">  
                     <br>
                     <div class ="col-xl-3">
                     </div>
