--- a/quiz.html
+++ b/quiz.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-12">
                 <div>
-                    <h1 class="title">The Great Autism Quiz<span>                        
+                    <h1 class="title">The Great Quiz<span>                        
                     <img class="logo-img" src="assets/images/jigsaw_piece.png"
                         alt="Autism Jigsaw Logo"
                     aria-label="Multicoloured Jigsaw piece."></span></h1>
