Func: add 12 myth cards to myth page and css to style.css

--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
                     </div>
                     <div class="form-row text-center">
                         <div class="col">
-                            <button type="submit" class="btn btn-secondary hvr-grow">Message Me!</button>
+                            <button type="submit" class="btn btn-lg btn-primary">Message Me!</button>
                         </div>                            
                     </div>  
                 </form>
